formularios de post y autor

--- a/project/apps/home/templates/home/index.html
+++ b/project/apps/home/templates/home/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CODER</title>
-</head>
-<body>
-    <h1>CODERRRS</h1>
-</body>
-</html>
+{% extends 'home/base.html' %}
+
+{% block contenido %}
+
+<h2>Menú principal</h2>
+    
+{% endblock contenido %}
