--- a/project/apps/home/templates/home/footer.html
+++ b/project/apps/home/templates/home/footer.html
@@ -1,1 +1,3 @@
-<p>2023 - Todos los derechos reservados</p>
+<footer class="footer text-faded text-center py-1">
+    <div class="container"><p class="m-0 small">Copyright &copy; Your Website 2023</p></div>
+</footer>
