Problema arreglado, desgloce de htmls

--- a/project/apps/home/templates/home/index.html
+++ b/project/apps/home/templates/home/index.html
@@ -1,4 +1,7 @@
 {% extends 'home/base.html' %}
+
+{% load static %}
+
 {% block contenido %}
 <section class="page-section clearfix">
     <div class="container">
@@ -30,7 +33,6 @@
         </div>
     </div>
 </section>
-
 <header>
     
     <h1 class="site-heading text-center text-faded d-none d-lg-block">
