--- a/project/apps/home/templates/home/footer.html
+++ b/project/apps/home/templates/home/footer.html
@@ -1,3 +1,4 @@
+{% load static %}
 <footer class="footer text-faded text-center py-1">
     <div class="container"><p class="m-0 small">Copyright &copy; Your Website 2023</p></div>
 </footer>
