todos los index modificados con extends y block

--- a/project/apps/home/templates/home/base.html
+++ b/project/apps/home/templates/home/base.html
@@ -19,6 +19,13 @@
         {% block contenido %}
             
         {% endblock contenido %}
+        <header>
+    
+            <h1 class="site-heading text-center text-faded d-none d-lg-block">
+                <span class="site-heading-upper text-primary mb-3">Al servicio de paladares exquisitos</span>
+                <span class="site-heading-lower">Cafeterías Grano Magno</span>
+            </h1>
+        </header>
         {% include 'home/footer.html' %}
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
