--- a/project/apps/home/templates/home/index.html
+++ b/project/apps/home/templates/home/index.html
@@ -24,7 +24,7 @@
             <div class="col-xl-9 mx-auto">
                 <div class="cta-inner bg-faded text-center rounded">
                     <h2 class="section-heading mb-4">
-                        <span class="section-heading-upper">NUestra promesa</span>
+                        <span class="section-heading-upper">Nuestra promesa</span>
                         <span class="section-heading-lower">Para vos</span>
                     </h2>
                     <p class="mb-0">Cuando ingresa a nuestra tienda para comenzar el día, nos dedicamos a brindarle un servicio amable, un ambiente acogedor y, sobre todo, excelentes productos elaborados con ingredientes de la más alta calidad. Si no está satisfecho, háganoslo saber y haremos todo lo posible para hacer las cosas bien.</p>
