--- a/project/apps/home/templates/home/navbar.html
+++ b/project/apps/home/templates/home/navbar.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{% url 'home:index' %}">Inicio</a></li>
-                <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{% url 'nosotros:index' %}">Acerca de nosotros</a></li>
+                <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{% url 'nosotros:index' %}">Nosotros</a></li>
                 <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{% url 'producto:index' %}">Productos</a></li>
                 <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="{% url 'tienda:index' %}">Tienda</a></li>
             </ul>
