--- a/project/apps/nosotros/templates/nosotros/index.html
+++ b/project/apps/nosotros/templates/nosotros/index.html
@@ -2,6 +2,8 @@
 
 {% block contenido %}
 
-    <h1>Acerca de Nosotros</h1>
+
+    <h1 class="text-light text-center">Nosotros</h1>
     
+
 {% endblock contenido %}
