--- a/project/apps/tienda/templates/tienda/index.html
+++ b/project/apps/tienda/templates/tienda/index.html
@@ -2,6 +2,6 @@
 
 {% block contenido %}
 
-    <h1>Nuestra tienda</h1>
+    <h1 class="text-light text-center">Nuestra tienda</h1>
     
 {% endblock contenido %}
