--- a/project/apps/producto/templates/producto/producto_categoria_create.html
+++ b/project/apps/producto/templates/producto/producto_categoria_create.html
@@ -3,7 +3,7 @@
 
 {% block content_producto %}
 
-    <h2 class="text-light text-center">Categorías de Productos</h2>
+    <h2 class="text-light text-center">Conocé Nuestros Productos</h2>
         <form method="post">
             {% csrf_token %}
             <div class="form-group">
