--- a/project/apps/home/templates/home/index.html
+++ b/project/apps/home/templates/home/index.html
@@ -3,6 +3,11 @@
 {% load static %}
 
 {% block contenido %}
+
+    {% if user.is_authenticated %}
+        <p class="text-light">{{mensaje}}</p>
+    {% endif %}
+
 <section class="page-section clearfix">
     <div class="container">
         <div class="intro">
